// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`confirm (isCI = false) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  yes?
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>No</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > can set initialValue 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim>○</bold> <dim>Yes</bold> <dim>/</bold> <green>●</fg> No
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>No</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > left arrow moves to previous choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Yes</bold> <dim>/</bold> <green>●</fg> No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders custom active choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> bleep <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>bleep</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders custom inactive choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>bleep</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders message with choices 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders multi-line messages correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<dim>│</fg>  bar
<dim>│</fg>  baz
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  bar
<dim>│</fg>  baz
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > renders options in vertical alignment 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes
<cyan>│</fg>  <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > right arrow moves to next choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Yes</bold> <dim>/</bold> <green>●</fg> No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>No</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > can be aborted by a signal 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  yes?
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  foo
<dim>│</fg>  [9m<dim>No</bold>[29m
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > can set initialValue 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <dim>○</bold> <dim>Yes</bold> <dim>/</bold> <green>●</fg> No
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>No</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > global withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > left arrow moves to previous choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Yes</bold> <dim>/</bold> <green>●</fg> No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders custom active choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> bleep <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>bleep</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders custom inactive choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>bleep</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders message with choices 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders multi-line messages correctly 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<dim>│</fg>  bar
<dim>│</fg>  baz
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=6>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  bar
<dim>│</fg>  baz
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > renders options in vertical alignment 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes
<cyan>│</fg>  <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=5>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > right arrow moves to next choice 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  foo
<cyan>│</fg>  <green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=2>",
  "<erase.line><cursor.left count=1>",
  "<cyan>│</fg>  <dim>○</bold> <dim>Yes</bold> <dim>/</bold> <green>●</fg> No",
  "<cursor.down count=2>",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>│</fg>  <dim>No</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`confirm (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  foo
<green>●</fg> Yes <dim>/</bold> <dim>○</bold> <dim>No</bold>

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  foo
<dim>Yes</bold>",
  "
",
  "<cursor.show>",
]
`;
